--- a/firstApp1/firstApp1.csproj
+++ b/firstApp1/firstApp1.csproj
@@ -85,6 +85,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Service\AdoNetService.cs" />
     <Compile Include="Service\LeetCodeEasyProblems.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
